<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    
    <item
        android:id="@+id/action_select_photo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_select_photo"/>
        <item
        android:id="@+id/action_select_video"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_select_video"/>
    
    
        <item
        android:id="@+id/action_take_photo"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_take_photo"/>
        
            <item
        android:id="@+id/action_take_video_hd"
        android:orderInCategory="103"
        android:showAsAction="never"
        android:title="@string/action_take_video_hd"/>
            
                        <item
        android:id="@+id/action_take_video"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/action_take_video"/>
                        
        <item
        android:id="@+id/action_about"
        android:orderInCategory="105"
        android:showAsAction="never"
        android:title="@string/about_text"/>
            

</menu>
